crates/tmark-writers/tests/snapshots/web__web__reference-citation-narrative.snap
---
source: crates/tmark-writers/tests/web.rs
expression: snapshot
---
---
press:
  features:
    citations.narrative: true
  sources:
    bibliography:
      ein05: {type: article, author: "Einstein, Albert", year: 1905, title: Zur Elektrodynamik bewegter Körper}
---

As (<a class="ts-cite" href="#ref-ein05">Einstein 1905</a>) showed, the effect is real (<a class="ts-cite" href="#ref-ein05">Einstein 1905</a>, p. 33) and dated (<a class="ts-cite" href="#ref-ein05">1905</a>); see (<a class="ts-cite" href="#ref-ein05">Einstein 1905</a>; <a class="ts-cite" href="#ref-ein05">Einstein 1905</a>).

## References

<ol class="ts-bibliography">
<li id="ref-ein05">Einstein, Albert. (1905). <em>Zur Elektrodynamik bewegter Körper</em></li>
</ol>
