crates/tmark-writers/tests/snapshots/web__web__role-aside-deprecated.snap
---
source: crates/tmark-writers/tests/web.rs
expression: snapshot
---
Hooke's law <span class="ts-aside" data-side="left">linear only</span> holds.
