crates/tmark-writers/tests/snapshots/web__web__role-aside.snap
---
source: crates/tmark-writers/tests/web.rs
expression: snapshot
---
Hooke's law <span class="ts-aside" data-side="left">linear only at small strain</span> holds.
