crates/tmark-writers/tests/snapshots/web__web__role-code.snap
---
source: crates/tmark-writers/tests/web.rs
expression: snapshot
---
Call `#!py print(1)` or `#!py print(1)` but never `rm -rf`.
