crates/tmark-writers/tests/snapshots/web__web__role-index-deprecated.snap
---
source: crates/tmark-writers/tests/web.rs
expression: snapshot
---
Relativity <span class="ts-index" data-tag="relativity" data-registry="physics"></span>.
