crates/tmark-writers/tests/snapshots/web__web__role-index-then-bracket.snap
---
source: crates/tmark-writers/tests/web.rs
expression: snapshot
---
<span class="ts-index" data-tag="a"></span>\[b] and <span class="ts-index" data-tag="c" data-tag1="d"></span>\[e]
