crates/tmark-writers/tests/snapshots/web__web__role-inline-sugar.snap
---
source: crates/tmark-writers/tests/web.rs
expression: snapshot
---
Some ==marked==, ~~deleted~~, H~2~O, E=mc^2^, ++ctrl+alt+s++, **bold** and *emph*.
